# skim-ext

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
skimpy_ext/: skimpy.py
tests/: trying.py
